# agl-service-radio2

./: README.md  meson.build
protos/: radio.proto
src/: CMakeLists.txt  RadioImpl.cc  RadioImpl.h  main-grpc.cc  meson.build  radio-binding.c  radio_impl.h  radio_impl_kingfisher.c  radio_impl_null.c  radio_impl_null.h  radio_impl_rtlsdr.c  radio_impl_tef665x.c  radio_impl_tef665x.h  radio_output_gstreamer.c  tef665x.h
src/convenience/: convenience.c
systemd/: agl-service-radio.service  meson.build
